# fenshitu-mcp

./: .gitignore  MCP_INTEGRATION.md  README.md  README_CN.md  pyproject.toml  requirements.txt
src/fenshitu/: chart_1day.py  chart_7day.py  data_fetcher.py  indicators.py  server.py  styles.py
