[project]
name = "fenshitu-mcp"
version = "0.1.0"
description = "MCP service for generating A-share stock intraday charts"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.20.0",
    "akshare>=1.14.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
]

[project.scripts]
fenshitu-mcp = "fenshitu.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
